@@ -1,4 +1,15 @@
 ------------------------------------------------------------------------
+r2076 | gaser | 2022-08-10 01:11:04
+
+Changed paths:
+ M CHANGES.txt
+ M cat_surf_results.m
+ M cat_vol_img2mip.m
+
+
+Changed: Added option to leave slice definition empty in cat_surf_results.m
+         to automatically estimate slices with local maxima.
+------------------------------------------------------------------------
 r2075 | gaser | 2022-08-10 00:19:02
 
 Changed paths:
